added login page and route

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,9 @@
 					Welcome to the Disco-tech! A blog dedicated to all things
 					technological.
 				</h2>
+				<nav>
+					<a href="/login">login</a>
+				</nav>
 			</header>
 			<main>
 				{{{body}}}
