--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,6 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Disco-Tech</title>
-		<link rel="stylesheet" href="/stylesheets/style.css" />
 	</head>
 
 	<body>
@@ -18,6 +17,7 @@
 					technological.
 				</h2>
 				<nav>
+					<button id="logout" class="btn-no-style">logout</button>
 					<a href="/login">login</a>
 				</nav>
 			</header>
@@ -28,7 +28,7 @@
 
 			</footer>
 		</div>
-
+		<script src="/javascript/logout.js"></script>
 	</body>
 
 </html>
