--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,12 +3,10 @@
 		<li>
 			<article class="post">
 				<div class="title">
-					<a href="{{post_text}}" target="_blank">{{title}}</a>
+					<a href="/post/{{id}}">{{title}}</a>
 					<span>({{post_text}})</span>
 				</div>
 				<div class="meta">
-					{{vote_count}}
-					point(s) by
 					{{user.username}}
 					on
 					{{created_at}}
