--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,19 +1,7 @@
 <ol class="post-list">
-	{{#each posts}}
-		<li>
-			<article class="post">
-				<div class="title">
-					<a href="/post/{{id}}">{{title}}</a>
-					<span>({{post_text}})</span>
-				</div>
-				<div class="meta">
-					{{user.username}}
-					on
-					{{created_at}}
-					|
-					<a href="/post/{{id}}">{{comments.length}} comment(s)</a>
-				</div>
-			</article>
-		</li>
-	{{/each}}
+  {{#each posts as |post|}}
+  <li>
+    {{> post-info post }}
+  </li>
+  {{/each}}
 </ol>
