--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,7 +1,9 @@
 <article class="post">
 	<div class="title">
 		<a href="/post/{{id}}">{{title}}</a>
-		<span>({{post_url}})</span>
+	</div>
+	<div class="post-text">
+		{{post_text}}
 	</div>
 	<div class="meta">
 		by
