--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
-<ol class="post-list">
+<ul class="list-group m-3">
   {{#each posts as |post|}}
-  <li>
+  <li class="list-group-item border-3 rounded m-2 p-0 col-10 align-self-center ">
     {{> post-info post }}
   </li>
   {{/each}}
-</ol>
+</ul>
