--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,28 +1,42 @@
 <html lang="en">
-
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Disco-Tech</title>
+		<title>Disco-Tech Blog</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
 	</head>
 
 	<body>
 		<div class="wrapper">
 			<header>
-				<h1>
-					<a href="/">Disco-Tech Blog</a>
-				</h1>
-				<h2>
-					Welcome to the Disco-tech! A blog dedicated to all things
-					technological.
-				</h2>
-				<nav>
-					{{#if loggedIn}}
-						<a href="/dashboard">dashboard</a>
-						<button id="logout" class="btn-no-style">logout</button>
-					{{else}}
-						<a href="/login">login</a>
-					{{/if}}
+				<nav class="navbar navbar-expand-md navbar-light bg-light py-3">
+					<div class="container">
+						<a class="navbar-brand mb-0 h1" href="/">Disco-Tech Blog</a>
+					</div>
+					<div class="container justify-content-center text-center">
+						Welcome to the Disco-tech! A blog dedicated to all things
+						technological.
+					</div>
+					<div class="container justify-content-end">
+						{{#if loggedIn}}
+							<a
+								class="navbar-brand mb-0 h1 align-self-center"
+								href="/dashboard"
+							>dashboard</a>
+							<button
+								class="btn btn-outline-success"
+								id="logout"
+								class="btn-no-style"
+							>logout</button>
+						{{else}}
+							<a class="navbar-brand" href="/login">login</a>
+						{{/if}}
+					</div>
 				</nav>
 			</header>
 			<main>
@@ -35,6 +49,11 @@
 		{{#if loggedIn}}
 			<script src="/javascript/logout.js"></script>
 		{{/if}}
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+			crossorigin="anonymous"
+		></script>
 	</body>
 
 </html>
