--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,19 +1,31 @@
-{{> post-info post }}
+<div class ="container-fluid">
 
+<div class ="container-fluid mt-5 mb-5">
+{{> post-info post }}
+{{> comments post.comments}}
+</div>
+<div class ="container-fluid mt-5 mb-5">
+
+</div>
 {{#if loggedIn}}
-	<form class="comment-form">
-		<div>
+<div class="d-flex p-2 bd-highlight justify-content-center">
+	<form class="comment-form d-flex row">
+		<div class="row col-12">
 			<textarea name="comment-body"></textarea>
 		</div>
 
-		<div>
+		<div class="row">
 			<button type="submit">add comment</button>
 		</div>
 	</form>
+</div>
 {{/if}}
 
-{{> comments post.comments}}
+
 
 {{#if loggedIn}}
 	<script src="/javascript/comment.js"></script>
 {{/if}}
+
+
+</div>
