--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,33 +1,47 @@
-<form class="login-form">
-	<div>
-		<label for="email-login">email:</label>
-		<input type="text" id="email-login" />
+<div class="container-fluid mt-5 mb-5">
+	<div class="d-flex p-2 bd-highlight justify-content-center">
+		<form
+			class="login-form d-flex row bg-light border bw-2 rounded justify-content-center col-8"
+		>
+			<div class="row col-9 m-2 p-2">
+				<label for="email-login">Email:</label>
+				<input type="text" id="email-login" />
+			</div>
+			<div class="row col-9 m-2">
+				<label for="password-login">Password:</label>
+				<input type="password" id="password-login" />
+			</div>
+			<div class="row col-9 m-2">
+				<button
+					type="submit"
+					class="btn btn-primary btn-lg btn-block"
+				>login</button>
+			</div>
+		</form>
 	</div>
-	<div>
-		<label for="password-login">password:</label>
-		<input type="password" id="password-login" />
+	<div class="d-flex p-2 bd-highlight justify-content-center">
+		<form
+			class="signup-form d-flex row bg-light border bw-2 rounded justify-content-center col-8"
+		>
+			<div class="row col-9 m-2 p-2">
+				<label for="username-signup">Username:</label>
+				<input type="text" id="username-signup" />
+			</div>
+			<div class="row col-9 m-2">
+				<label for="email-signup">Email:</label>
+				<input type="text" id="email-signup" />
+			</div>
+			<div class="row col-9 m-2">
+				<label for="password-signup">Password:</label>
+				<input type="password" id="password-signup" />
+			</div>
+			<div class="row col-9 m-2">
+				<button
+					type="submit"
+					class="btn btn-primary btn-lg btn-block"
+				>signup</button>
+			</div>
+		</form>
 	</div>
-	<div>
-		<button type="submit">login</button>
-	</div>
-</form>
-
-<form class="signup-form">
-	<div>
-		<label for="username-signup">username:</label>
-		<input type="text" id="username-signup" />
-	</div>
-	<div>
-		<label for="email-signup">email:</label>
-		<input type="text" id="email-signup" />
-	</div>
-	<div>
-		<label for="password-signup">password:</label>
-		<input type="password" id="password-signup" />
-	</div>
-	<div>
-		<button type="submit">signup</button>
-	</div>
-</form>
-
+</div>
 <script src="/javascript/login.js"></script>
