--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,30 +1,37 @@
 <section>
+<div class="container-fluid mt-5 mb-5 justify-content-center text-center">
 	<h2>Create New Post</h2>
-
-	<form class="new-post-form">
-		<div>
-			<label for="post-title">Title</label>
-			<input type="text" id="post-title" name="post-title" />
-		</div>
-		<div>
-			<label for="post-text">Post </label>
-			<input id="post-text" name="post-text" />
-		</div>
-		<button type="submit" class="btn">Create</button>
-	</form>
+	<div class="d-flex p-2 bd-highlight justify-content-center">
+		<form class="new-post-form d-flex row bg-light border bw-2 rounded justify-content-center col-8">
+			<div class="row col-9 m-2 p-2">
+				<label for="post-title">Title</label>
+				<input type="text" id="post-title" name="post-title" />
+			</div>
+			<div class="row col-9 m-2">
+				<label for="post-text">Post </label>
+				<input id="post-text" name="post-text" />
+			</div>
+			<div class="row col-9 m-2">
+				<button type="submit" class="btn btn-primary btn-lg btn-block">Create</button>
+			</div>
+		</form>
+	</div>
+</div>
 </section>
 
 {{#if posts.length}}
 <section>
-  <h2>Your Posts</h2>
-  <ol>
-    {{#each posts as |post|}}
-    <li>
-      {{> post-info post}}
-      <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
-    </li>
-    {{/each}}
-  </ol>
+	<div class="container-fluid mt-5 mb-5 justify-content-center text-center">
+		<h2>Your Posts</h2>
+	</div>
+		<ol>
+			{{#each posts as |post|}}
+			<li>
+			{{> post-info post}}
+			<a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+			</li>
+			{{/each}}
+		</ol>
 </section>
 {{/if}}
 
